--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div>
         <center>
-        <img src="Photos/OIP.jpg" alt="" width="200px" height="200px">
+        <img src="OIP.jpg" alt="" width="200px" height="200px">
     </center>
     </div>
     <div>
@@ -60,7 +60,7 @@
         </center>
     </div>
     <div>
-        i
+        
     </div>
     <div>
         <center>
