--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         </center>
     </div>
     <div>
-        <div>
+        
         <center>
-        <img src="Photos/download.jpg" alt="" width="200px" height="200px">
+        <img src="download.jpg" alt="" width="200px" height="200px">
     </center>
-    </div>
+    
     </div>
     <div>
         <center>
